# entropy-pilot-experiments

./: LICENSE  README.md  pyproject.toml
entropypilot/: .env.sample  __init__.py  color_universe.py  demo.ipynb  demo_sync.ipynb  simulation.py  test.py
entropypilot/utils/: __init__.py  color.py  llm.py  models.py  visualization.py
