[project]
name = "entropypilot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "matplotlib>=3.10.8",
    "nest-asyncio>=1.6.0",
    "numpy>=2.4.1",
    "openai>=2.15.0",
    "pandas>=2.3.3",
    "pip>=25.3",
    "plotly>=5.24.1",
    "pydantic-settings>=2.12.0",
    "pydantic[email]>=2.12.5",
    "seaborn>=0.13.2",
    "tiktoken>=0.12.0",
    "torch>=2.9.1",
    "transformers>=4.57.6",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
